Fixed z-index for buttons

--- a/src/app/components/graph/graph.component.scss
+++ b/src/app/components/graph/graph.component.scss
@@ -14,11 +14,12 @@
     .blocks-wrapper{
         margin-top: 20px;
         display: flex;
-        
         flex-wrap: wrap;
+
         .graph-block{
             margin-left: 100px;
             margin-bottom: 50px;
+            z-index: 5;
         }
     }
 }
@@ -28,4 +29,5 @@ svg{
     position: absolute;
     width: 900px;
     height: 500px;
+    z-index: 1;
 }
